--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                                 </div>
                                                 <div class="col-md-4 servic-bkp">
                                                     <div class="service-img">
-                                                        <img src="images/s7.jpeg" alt="/" class="service-img-wid">
+                                                        <img src="images/s7.jpg" alt="/" class="service-img-wid">
                                                     </div>
                                                     <div class="srvice-text">
                                                         <h3>Wardrobes</h3>
